{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 185,
  "lineage": "0467dd7b-796b-5f12-93a5-556aed72278c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "application",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c6ebbd55ab05f070",
            "arn": "arn:aws:ec2:eu-west-3:992122884453:instance/i-0d3e78a9fa9ad1811",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d3e78a9fa9ad1811",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "challenge_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08790d9b5f1f01fba",
            "private_dns": "ip-172-20-1-82.eu-west-3.compute.internal",
            "private_ip": "172.20.1.82",
            "public_ip": "35.180.203.113",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b99477901af9ebd8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08a943cf13176ea0f",
            "tags": {
              "Name": "App_Server"
            },
            "tags_all": {
              "Name": "App_Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f1e4dc4f307e94ed"
            ]
          },
          "dependencies": [
            "aws_security_group.app_sg",
            "aws_security_group.permit_web_traffic",
            "aws_subnet.devops_public_subnet",
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c6ebbd55ab05f070",
            "arn": "arn:aws:ec2:eu-west-3:992122884453:instance/i-0631d0277589a5b30",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0631d0277589a5b30",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "challenge_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08cc1e5dcbb7ba10a",
            "private_dns": "ip-172-20-3-248.eu-west-3.compute.internal",
            "private_ip": "172.20.3.248",
            "public_ip": "35.180.79.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-051a6da67b877bb31",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0911af090caa71a0f",
            "tags": {
              "Name": "DB_Server"
            },
            "tags_all": {
              "Name": "DB_Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-087c3d4a2f33c087b"
            ]
          },
          "dependencies": [
            "aws_security_group.app_sg",
            "aws_security_group.db_sg",
            "aws_security_group.permit_web_traffic",
            "aws_subnet.db_subnet",
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c6ebbd55ab05f070",
            "arn": "arn:aws:ec2:eu-west-3:992122884453:instance/i-04ac91ae09681e984",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04ac91ae09681e984",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "challenge_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07017a75a5f3de867",
            "private_dns": "ip-172-20-1-242.eu-west-3.compute.internal",
            "private_ip": "172.20.1.242",
            "public_ip": "15.236.42.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0780207635dcc3d44",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08a943cf13176ea0f",
            "tags": {
              "Name": "LB_Server"
            },
            "tags_all": {
              "Name": "LB_Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-065366b5f69c9d3e2"
            ]
          },
          "dependencies": [
            "aws_security_group.permit_web_traffic",
            "aws_subnet.devops_public_subnet",
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "devops_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:992122884453:internet-gateway/igw-073a33443748f869c",
            "id": "igw-073a33443748f869c",
            "owner_id": "992122884453",
            "tags": {
              "Name": "IGW-DevOps_Challenge"
            },
            "tags_all": {
              "Name": "IGW-DevOps_Challenge"
            },
            "vpc_id": "vpc-0dedd9a485665eb78"
          },
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "devops_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:992122884453:route-table/rtb-08d6266be95a33805",
            "id": "rtb-08d6266be95a33805",
            "owner_id": "992122884453",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-073a33443748f869c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt-DevOps_Challenge"
            },
            "tags_all": {
              "Name": "public_rt-DevOps_Challenge"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dedd9a485665eb78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.devops_igw",
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2e8d7abb184845a",
            "route_table_id": "rtb-08d6266be95a33805",
            "subnet_id": "subnet-0911af090caa71a0f"
          },
          "dependencies": [
            "aws_internet_gateway.devops_igw",
            "aws_route_table.devops_rt",
            "aws_subnet.db_subnet",
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011be4d3af436de59",
            "route_table_id": "rtb-08d6266be95a33805",
            "subnet_id": "subnet-08a943cf13176ea0f"
          },
          "dependencies": [
            "aws_internet_gateway.devops_igw",
            "aws_route_table.devops_rt",
            "aws_subnet.devops_public_subnet",
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:992122884453:security-group/sg-0f1e4dc4f307e94ed",
            "description": "Permit inbound TCP traffic from LB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f1e4dc4f307e94ed",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from LB",
                "from_port": 1337,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1337
              },
              {
                "cidr_blocks": [],
                "description": "API Access from LB",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-065366b5f69c9d3e2"
                ],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from LB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-065366b5f69c9d3e2"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "UI Access from LB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-065366b5f69c9d3e2"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "app_sg",
            "name_prefix": "",
            "owner_id": "992122884453",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "microservice_access"
            },
            "tags_all": {
              "Name": "microservice_access"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dedd9a485665eb78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.permit_web_traffic",
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:992122884453:security-group/sg-087c3d4a2f33c087b",
            "description": "Permit microservice inbout traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-087c3d4a2f33c087b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permit SSH",
                "from_port": 1337,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1337
              },
              {
                "cidr_blocks": [],
                "description": "Permit Microservice TCP Traffic",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f1e4dc4f307e94ed"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "db_sg",
            "name_prefix": "",
            "owner_id": "992122884453",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db_sg"
            },
            "tags_all": {
              "Name": "db_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dedd9a485665eb78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_sg",
            "aws_security_group.permit_web_traffic",
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "permit_web_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:992122884453:security-group/sg-065366b5f69c9d3e2",
            "description": "Permit Inbound HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-065366b5f69c9d3e2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "GLobal SSH Access",
                "from_port": 1337,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1337
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Global HTTP Access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Global HTTPS Acess",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "permit_web_traffic",
            "name_prefix": "",
            "owner_id": "992122884453",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "tags_all": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dedd9a485665eb78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:992122884453:subnet/subnet-05adc529549db4e3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "172.20.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05adc529549db4e3e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992122884453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app_subnet"
            },
            "tags_all": {
              "Name": "app_subnet"
            },
            "vpc_id": "vpc-0dedd9a485665eb78"
          },
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:992122884453:subnet/subnet-0911af090caa71a0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "172.20.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0911af090caa71a0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992122884453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db_subnet"
            },
            "tags_all": {
              "Name": "db_subnet"
            },
            "vpc_id": "vpc-0dedd9a485665eb78"
          },
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devops_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:992122884453:subnet/subnet-08a943cf13176ea0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "172.20.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a943cf13176ea0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992122884453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet"
            },
            "tags_all": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-0dedd9a485665eb78"
          },
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devops_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:992122884453:vpc/vpc-0dedd9a485665eb78",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-04596be15be28e493",
            "default_route_table_id": "rtb-02a6632ceeb72310c",
            "default_security_group_id": "sg-0499c59590fa19d83",
            "dhcp_options_id": "dopt-0384c42adb7ba12bc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0dedd9a485665eb78",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02a6632ceeb72310c",
            "owner_id": "992122884453",
            "tags": {
              "Name": "VPC-DevOps_Challenge"
            },
            "tags_all": {
              "Name": "VPC-DevOps_Challenge"
            }
          }
        }
      ]
    }
  ]
}